--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   smooth_page_indicator: ^1.2.1
   go_router: ^17.0.0
   shared_preferences: ^2.5.3
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
