--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   go_router: ^17.0.0
   shared_preferences: ^2.5.3
   flutter_rating_bar: ^4.0.1
+  font_awesome_flutter: ^10.12.0
 
 dev_dependencies:
   flutter_test:
