--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^2.5.3
   flutter_rating_bar: ^4.0.1
   font_awesome_flutter: ^10.12.0
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
