--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   font_awesome_flutter: ^10.12.0
   url_launcher: ^6.3.2
+  supabase_flutter: ^2.10.3
 
 dev_dependencies:
   flutter_test:
