--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   font_awesome_flutter: ^10.12.0
   url_launcher: ^6.3.2
   supabase_flutter: ^2.10.3
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
